# sandboxed.sh

./: .env.example  .gitignore  Cargo.toml  DEBUGGING.md  Dockerfile  INSTALL.md  PROVIDERS.md  README.md  agents.md  docker-compose.yml  opencode.json  ralph.txt  secrets.json.example
.claude/: CLAUDE.md  settings.json
.cursor/rules/: dashboard.mdc  deployment.mdc  design-system.mdc  mcp.mdc  project.md  project.mdc  rust.mdc  secrets.mdc
.github/workflows/: ci-debounced.yml.example  ci.yml
dashboard/: TODO.md  next.config.ts  package.json  vitest.config.ts
dashboard/src/app/: globals.css  page.tsx
dashboard/src/components/: auth-gate.tsx  config-code-editor.tsx  desktop-stream.tsx  enhanced-input.test.tsx  enhanced-input.tsx  env-vars-editor.tsx  markdown-content.tsx  mission-automations-dialog.test.tsx  mission-automations-dialog.tsx  mission-switcher.tsx  new-mission-dialog.tsx  queue-strip.tsx  recent-tasks.tsx  server-connection-card.tsx  sidebar.tsx  streaming-markdown.tsx  system-components-card.tsx  system-monitor.tsx
dashboard/src/contexts/: library-context.tsx
dashboard/src/hooks/: use-dialog.test.ts
dashboard/src/lib/: api.ts  llm-settings.ts  llm.ts  mission-status.test.ts  mission-status.ts  rich-tags.test.ts  rich-tags.ts  settings.ts  skill-encryption.ts  swr-config.ts  utils.ts
dashboard/tests/: mission-backends.spec.ts  navigation.spec.ts
docker/: Caddyfile  entrypoint.sh  systemd-nspawn-wrapper.sh
docs/: DESKTOP_SETUP.md  DOCKER_ANALYSIS.md  HARNESS_SYSTEM.md  PROPOSALS.md  WORKSPACE_API.md  getting-started.md  install-docker.md  install-native.md
docs-site/: package.json
docs-site/content/: _meta.js  api.mdx  install-docker.mdx  setup.mdx
docs/arm64-sources-list/: README.md
docs/nspawn-dbus/: README.md
examples/oh-my-opencode/: README.md  cerebras.json  zai.json
ios_dashboard/: ITERATION_8_COMPLETION.md  README.md  project.yml
ios_dashboard/OpenAgentDashboard/: ContentView.swift  Info.plist
ios_dashboard/OpenAgentDashboard.xcodeproj/: project.pbxproj
ios_dashboard/OpenAgentDashboard/Models/: ChatMessage.swift  Mission.swift  Workspace.swift
ios_dashboard/OpenAgentDashboard/Services/: APIService.swift  ControlSessionManager.swift  DesktopStreamService.swift  WorkspaceState.swift
ios_dashboard/OpenAgentDashboardTests/: ModelTests.swift
ios_dashboard/SandboxedDashboard/: ContentView.swift  Info.plist
ios_dashboard/ci_scripts/: ci_post_clone.sh
scripts/: README.md  check_results.py  generate_ios_icons.js  harness_contract_tests.sh  mission_browser_smoke.py  mission_stream_smoke.py  proxy_smoke.py  run_security_test.sh
scripts/prompts/: security_audit_rabby.md
src/: ai_providers.rs  config.rs  cost.rs  lib.rs  main.rs  nspawn.rs  opencode_config.rs  provider_health.rs  settings.rs  skills_registry.rs  util.rs  workspace.rs  workspace_exec.rs
src/agents/: context.rs  improvements.rs  mod.rs  opencode.rs  simple.rs  tree.rs  tuning.rs  types.rs
src/api/: ai_providers.rs  ampcode.rs  auth.rs  automation_variables.rs  backends.rs  claudecode.rs  console.rs  control.rs  desktop.rs  desktop_stream.rs  fs.rs  library.rs  mcp.rs  mission_runner.rs  mod.rs  model_routing.rs  monitoring.rs  opencode.rs  providers.rs  proxy.rs  routes.rs  settings.rs  ssh_util.rs  system.rs  types.rs  workspaces.rs
src/backend/: events.rs  mod.rs  shared.rs
src/budget/: allocation.rs  benchmarks.rs  budget.rs  learned.rs  mod.rs  pricing.rs  resolver.rs  retry.rs
src/llm/: error.rs  mod.rs  openrouter.rs
src/mcp/: config.rs  registry.rs  types.rs
src/memory/: context.rs  embed.rs  mod.rs  retriever.rs  supabase.rs  types.rs  writer.rs
src/opencode/: mod.rs
src/secrets/: mod.rs
src/task/: deliverables.rs  mod.rs  subtask.rs  task.rs  verification.rs
src/tools/: browser.rs  composite.rs  desktop.rs  directory.rs  file_ops.rs  git.rs  github.rs  index.rs  memory.rs  mission.rs  mod.rs  search.rs  storage.rs  terminal.rs  web.rs
test_results/: MODEL_ANALYSIS_REPORT.md
workspaces/mission-547aefd0/: opencode.json
(+394 files in other folders)
