[package]
name = "open_agent"
version = "0.1.0"
edition = "2021"
description = "A minimal autonomous coding agent with full machine access"
authors = ["Open Agent Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
async-trait = "0.1"
futures = "0.3"

# For tool implementations
walkdir = "2"
urlencoding = "2"
anyhow = "1"
async-stream = "0.3"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
